重构devpl-codegen模块